Updated translations & changelog

--- a/locales/fr.arb
+++ b/locales/fr.arb
@@ -1,57 +1,74 @@
 {
-  "@@locale": "fr",
-  "homeSelectFile": "Sélectionner un fichier",
-  "homeSelectApp": "Application",
-  "homeSelectText": "Texte",
-  "homeSelectGallery": "Galerie",
-  "homeSelectTextTypeSomeText": "Tapez du texte",
-  "homeHistory": "Historique",
-  "homeReceiver": "Destinataire",
-  "homeUpdates": "Mises à jour",
-  "homeUpdatesTheLatestVersionIsInstalled": "La dernière version est déjà installée",
-  "homeUpdatesCurrentVersion": "Version actuelle",
-  "homeUpdatesLatestVersion": "Dernière version",
-  "homeUpdatesChangelog": "Journal des modifications",
-  "selectAppSearch": "Rechercher",
-  "selectAppHideSystem": "Masquer les applis système",
-  "selectAppHideNonLaunch": "Masquer les applis non-exécutables",
-  "introGeneralDone": "TERMINÉ",
-  "introGeneralNext": "SUIVANT",
-  "generalClose": "Fermer",
-  "generalSend": "Envoyer",
-  "generalOpenInGithub": "Ouvrir sur GitHub",
-  "generalLoading": "Chargement",
-  "@_INTRO_PAGE": {},
-  "intro1ConnectTitle": "CONNECTER",
-  "intro1ConnectDescription": "Connectez les appareils sur le même réseau Wi-Fi. Vous pouvez aussi utiliser le point d'accès mobile",
-  "intro2SendTitle": "ENVOYER",
-  "intro2SendDescription": "Vous pouvez envoyer des images, vidéos, fichiers et textes",
-  "intro3ReceiveTitle": "RECEVOIR",
-  "intro3ReceiveDescription": "Ouvrir ce lien sur un autre appareil sur n'importe quel navigateur Web. Si vous avez Sharik sur les deux appareils, vous pourrez utiliser la fonction \"recevoir\"",
-  "intro4EverywhereTitle": "PARTOUT",
-  "intro4EverywhereDescription": "Sharik est disponible sur la majorité des appareils mobiles et ordinateurs. De plus, c'est gratuit, sans pubs et son code est disponible en ligne. \nCliquez ici pour en savoir plus",
-  "@_ABOUT_PAGE": {},
-  "aboutInstalledVersion": "Version installée",
-  "aboutLatestVersion": "La dernière version",
-  "aboutLatestVersionUnknown": "inconnu",
-  "aboutCheckForUpdates": "Rechercher les mises à jour",
-  "aboutUpdate": "Mises à jour",
-  "aboutNoUpdates": "Aucune mises à jour",
-  "aboutOpenSourceLicenses": "Licences Open Sources",
-  "aboutTrackingPolicy": "Politique de suivi",
-  "aboutContributors": "Contributeurs",
-  "aboutSharikText": "Sharik est complètement libre avec son code accesible sur GitHub\nToute contribution est bienvenue :>",
-  "aboutChangelog": "Notes de mises à jour",
-  "aboutLicenses": "Licences",
-  "aboutPrivacyPolicy": "Politique de confidentialité",
-  "@_SHARING_PAGE": {},
-  "sharingReceiver": "Destinataire",
-  "sharingNetworkInterfaces": "Interfaces réseau",
-  "sharingSelectNetworkInterface": "Sélectionnez une interface réseau",
-  "sharingCopiedToClipboard": "Copié dans le presse-papier",
-  "sharingRecipientNeedsToBeConnected": "Le destinataire doit être connecté\nsur le même réseau",
-  "sharingOpenInBrowser": "Maintenant ouvrez ce lien\ndans n'importe quel navigateur",
-  "sharingConnectToWiFiOrHotspot": "Connectez-vous au Wi-Fi ou configurez un point d'accès mobile",
-  "fontAndika": "Andika",
-  "fontComfortaa": "Comfortaa"
+    "@@locale": "fr",
+    "homeSelectFile": "Sélectionner un fichier",
+    "homeSelectApp": "Application",
+    "homeSelectText": "Texte",
+    "homeSelectGallery": "Galerie",
+    "homeSelectTextTypeSomeText": "Tapez du texte",
+    "homeHistory": "Historique",
+    "homeReceiver": "Destinataire",
+    "homeUpdates": "Mises à jour",
+    "homeUpdatesTheLatestVersionIsInstalled": "La dernière version est déjà installée",
+    "homeUpdatesCurrentVersion": "Version actuelle",
+    "homeUpdatesLatestVersion": "Dernière version",
+    "homeUpdatesChangelog": "Journal des modifications",
+    "selectAppSearch": "Rechercher",
+    "selectAppHideSystem": "Masquer les applis système",
+    "selectAppHideNonLaunch": "Masquer les applis non-exécutables",
+    "introGeneralDone": "TERMINÉ",
+    "introGeneralNext": "SUIVANT",
+    "generalClose": "Fermer",
+    "generalSend": "Envoyer",
+    "generalOpenInGithub": "Ouvrir sur GitHub",
+    "generalLoading": "Chargement",
+    "@_INTRO_PAGE": {},
+    "intro1ConnectTitle": "CONNECTER",
+    "intro1ConnectDescription": "Connectez les appareils sur le même réseau Wi-Fi. Vous pouvez aussi utiliser le point d'accès mobile",
+    "intro2SendTitle": "ENVOYER",
+    "intro2SendDescription": "Vous pouvez envoyer des images, vidéos, fichiers et textes",
+    "intro3ReceiveTitle": "RECEVOIR",
+    "intro3ReceiveDescription": "Ouvrir ce lien sur un autre appareil sur n'importe quel navigateur Web. Si vous avez Sharik sur les deux appareils, vous pourrez utiliser la fonction \"recevoir\"",
+    "intro4EverywhereTitle": "PARTOUT",
+    "intro4EverywhereDescription": "Sharik est disponible sur la majorité des appareils mobiles et ordinateurs. De plus, c'est gratuit, sans pubs et son code est disponible en ligne. \nCliquez ici pour en savoir plus",
+    "@_ABOUT_PAGE": {},
+    "aboutInstalledVersion": "Version installée",
+    "aboutLatestVersion": "La dernière version",
+    "aboutLatestVersionUnknown": "inconnu",
+    "aboutCheckForUpdates": "Rechercher les mises à jour",
+    "aboutUpdate": "Mises à jour",
+    "aboutNoUpdates": "Aucune mises à jour",
+    "aboutOpenSourceLicenses": "Licences Open Sources",
+    "aboutTrackingPolicy": "Politique de suivi",
+    "aboutContributors": "Contributeurs",
+    "aboutSharikText": "Sharik est complètement libre avec son code accesible sur GitHub\nToute contribution est bienvenue :>",
+    "aboutChangelog": "Notes de mises à jour",
+    "aboutLicenses": "Licences",
+    "aboutPrivacyPolicy": "Politique de confidentialité",
+    "@_SHARING_PAGE": {},
+    "sharingReceiver": "Destinataire",
+    "sharingNetworkInterfaces": "Interfaces réseau",
+    "sharingSelectNetworkInterface": "Sélectionnez une interface réseau",
+    "sharingCopiedToClipboard": "Copié dans le presse-papier",
+    "sharingRecipientNeedsToBeConnected": "Le destinataire doit être connecté\nsur le même réseau",
+    "sharingOpenInBrowser": "Maintenant ouvrez ce lien\ndans n'importe quel navigateur",
+    "sharingConnectToWiFiOrHotspot": "Connectez-vous au Wi-Fi ou configurez un point d'accès mobile",
+    "fontAndika": "Andika",
+    "fontComfortaa": "Comfortaa",
+    "homeSend": "Envoyer",
+    "homeReceive": "Recevoir",
+    "homeFiles": "Fichiers",
+    "shareDownloadAllButton": "Tout télécharger (Ceci ignorera les dossiers, requiert JavaScript)",
+    "settingsAppearance": "Apparence",
+    "settingsPrivacy": "Vie Privée",
+    "settingsTracking": "Traçage",
+    "settingsTrackingAllow": "Autoriser",
+    "settingsTrackingDisable": "Désactiver",
+    "settingsTheme": "Thème",
+    "settingsThemeSystem": "Système",
+    "settingsThemeLight": "Clair",
+    "settingsThemeDark": "Sombre",
+    "settingsDisableScreenTransitions": "Désactiver les transitions des pages",
+    "settingsDisableBlur": "Désactiver le flou",
+    "settingsDisableTracking": "Désactiver le traçage",
+    "settingsTrackingDescription": "Sharik intègre un traçage respectant votre vie privée pour savoir plus sur le public de l'application. Nous utilisons les données analytiques pour vous proposer de nouvelles fonctionnalités et prioriser les tâches.\n\nLes informations collectées n'incluent pas votre adresse IP ou autre informations vous identifiant."
 }
