--- a/locales/it.arb
+++ b/locales/it.arb
@@ -1,57 +1,74 @@
 {
-  "@@locale": "it",
-  "homeSelectFile": "Seleziona file",
-  "homeSelectApp": "App",
-  "homeSelectText": "Testo",
-  "homeSelectGallery": "Galleria",
-  "homeSelectTextTypeSomeText": "Digita del testo",
-  "homeHistory": "Cronologia",
-  "homeReceiver": "Destinatario",
-  "homeUpdates": "Aggiornamenti",
-  "homeUpdatesTheLatestVersionIsInstalled": "L'ultima versione risulta essere già installata",
-  "homeUpdatesCurrentVersion": "Versione attuale",
-  "homeUpdatesLatestVersion": "Ultima versione",
-  "homeUpdatesChangelog": "Registro delle modifiche",
-  "selectAppSearch": "Cerca",
-  "selectAppHideSystem": "Nascondi applicazioni di sistema",
-  "selectAppHideNonLaunch": "Nascondi applicazioni non eseguibili",
-  "introGeneralDone": "FINE",
-  "introGeneralNext": "AVANTI",
-  "generalClose": "Chiudi",
-  "generalSend": "Invia",
-  "generalOpenInGithub": "Apri su GitHub",
-  "generalLoading": "Caricamento",
-  "@_INTRO_PAGE": {},
-  "intro1ConnectTitle": "COLLEGATI",
-  "intro1ConnectDescription": "Collega i dispositivi alla stessa rete. Puoi anche utilizzare un Hotspot",
-  "intro2SendTitle": "INVIA",
-  "intro2SendDescription": "Puoi condividere immagini, video, file e testo",
-  "intro3ReceiveTitle": "RICEVI",
-  "intro3ReceiveDescription": "Apri il link su qualsiasi browser di un altro dispositivo. Se hai Sharik su entrambi i dispositivi puoi anche usare la funzione destinatario",
-  "intro4EverywhereTitle": "OVUNQUE",
-  "intro4EverywhereDescription": "Sharik è disponibile per tutte le principali piattaforme mobili e desktop. Inoltre è gratuito, non contiene pubblicità e il codice sorgente è pubblicato online.\nClicca qui per scoprire di più",
-  "@_ABOUT_PAGE": {},
-  "aboutInstalledVersion": "Versione installata",
-  "aboutLatestVersion": "Ultima versione",
-  "aboutLatestVersionUnknown": "sconosciuta",
-  "aboutCheckForUpdates": "Ricerca aggiornamenti",
-  "aboutUpdate": "Aggiorna",
-  "aboutNoUpdates": "Nessun aggiornamento disponibile",
-  "aboutOpenSourceLicenses": "Licenze open source",
-  "aboutTrackingPolicy": "Politica di tracciamento",
-  "aboutContributors": "Collaboratori",
-  "aboutSharikText": "Sharik è completamente gratuito e il suo codice sorgente è pubblicato su GitHib.\nTutti sono invitati a contribuire :>",
-  "aboutChangelog": "Registro delle modifiche",
-  "aboutLicenses": "Licenze",
-  "aboutPrivacyPolicy": "Politica privacy",
-  "@_SHARING_PAGE": {},
-  "sharingReceiver": "Destinatario",
-  "sharingNetworkInterfaces": "Interfacce di rete",
-  "sharingSelectNetworkInterface": "Seleziona interfaccia di rete",
-  "sharingCopiedToClipboard": "Copiato negli appunti",
-  "sharingRecipientNeedsToBeConnected": "Il destinatario deve essere connesso\nalla stessa rete",
-  "sharingOpenInBrowser": "Ora apri questo link\nin qualsiasi browser",
-  "sharingConnectToWiFiOrHotspot": "Collegati al Wi-Fi o imposta un hotspot",
-  "fontAndika": "Andika",
-  "fontComfortaa": "Comfortaa"
+    "@@locale": "it",
+    "homeSelectFile": "Seleziona file",
+    "homeSelectApp": "App",
+    "homeSelectText": "Testo",
+    "homeSelectGallery": "Galleria",
+    "homeSelectTextTypeSomeText": "Digita del testo",
+    "homeHistory": "Cronologia",
+    "homeReceiver": "Destinatario",
+    "homeUpdates": "Aggiornamenti",
+    "homeUpdatesTheLatestVersionIsInstalled": "L'ultima versione risulta essere già installata",
+    "homeUpdatesCurrentVersion": "Versione attuale",
+    "homeUpdatesLatestVersion": "Ultima versione",
+    "homeUpdatesChangelog": "Registro delle modifiche",
+    "selectAppSearch": "Cerca",
+    "selectAppHideSystem": "Nascondi applicazioni di sistema",
+    "selectAppHideNonLaunch": "Nascondi applicazioni non eseguibili",
+    "introGeneralDone": "FINE",
+    "introGeneralNext": "AVANTI",
+    "generalClose": "Chiudi",
+    "generalSend": "Invia",
+    "generalOpenInGithub": "Apri su GitHub",
+    "generalLoading": "Caricamento",
+    "@_INTRO_PAGE": {},
+    "intro1ConnectTitle": "COLLEGATI",
+    "intro1ConnectDescription": "Collega i dispositivi alla stessa rete. Puoi anche utilizzare un Hotspot",
+    "intro2SendTitle": "INVIA",
+    "intro2SendDescription": "Puoi condividere immagini, video, file e testo",
+    "intro3ReceiveTitle": "RICEVI",
+    "intro3ReceiveDescription": "Apri il link su qualsiasi browser di un altro dispositivo. Se hai Sharik su entrambi i dispositivi puoi anche usare la funzione destinatario",
+    "intro4EverywhereTitle": "OVUNQUE",
+    "intro4EverywhereDescription": "Sharik è disponibile per tutte le principali piattaforme mobili e desktop. Inoltre è gratuito, non contiene pubblicità e il codice sorgente è pubblicato online.\nClicca qui per scoprire di più",
+    "@_ABOUT_PAGE": {},
+    "aboutInstalledVersion": "Versione installata",
+    "aboutLatestVersion": "Ultima versione",
+    "aboutLatestVersionUnknown": "sconosciuta",
+    "aboutCheckForUpdates": "Ricerca aggiornamenti",
+    "aboutUpdate": "Aggiorna",
+    "aboutNoUpdates": "Nessun aggiornamento disponibile",
+    "aboutOpenSourceLicenses": "Licenze open source",
+    "aboutTrackingPolicy": "Politica di tracciamento",
+    "aboutContributors": "Collaboratori",
+    "aboutSharikText": "Sharik è completamente gratuito e il suo codice sorgente è pubblicato su GitHib.\nTutti sono invitati a contribuire :>",
+    "aboutChangelog": "Registro delle modifiche",
+    "aboutLicenses": "Licenze",
+    "aboutPrivacyPolicy": "Politica privacy",
+    "@_SHARING_PAGE": {},
+    "sharingReceiver": "Destinatario",
+    "sharingNetworkInterfaces": "Interfacce di rete",
+    "sharingSelectNetworkInterface": "Seleziona interfaccia di rete",
+    "sharingCopiedToClipboard": "Copiato negli appunti",
+    "sharingRecipientNeedsToBeConnected": "Il destinatario deve essere connesso\nalla stessa rete",
+    "sharingOpenInBrowser": "Ora apri questo link\nin qualsiasi browser",
+    "sharingConnectToWiFiOrHotspot": "Collegati al Wi-Fi o imposta un hotspot",
+    "fontAndika": "Andika",
+    "fontComfortaa": "Comfortaa",
+    "homeSend": "Invia",
+    "homeReceive": "Ricevi",
+    "homeFiles": "File",
+    "shareDownloadAllButton": "Scarica tutto (Salterà le cartelle, Richiede JavaScript abilitato)",
+    "settingsAppearance": "Aspetto",
+    "settingsPrivacy": "Privacy",
+    "settingsTracking": "Monitoraggio",
+    "settingsTrackingAllow": "Consenti",
+    "settingsTrackingDisable": "Disabilita",
+    "settingsTheme": "Tema",
+    "settingsThemeSystem": "Sistema",
+    "settingsThemeLight": "Chiaro",
+    "settingsThemeDark": "Scuro",
+    "settingsDisableScreenTransitions": "Disabilita le transizioni dello schermo",
+    "settingsDisableBlur": "Disabilita sfocatura",
+    "settingsDisableTracking": "Disabilita monitoraggio",
+    "settingsTrackingDescription": "Sharik incorpora il monitoraggio rispettoso della privacy per scoprire di più sul pubblico dell'app. Stiamo usando i dati analitici per pianificare le nuove funzionalità e dare priorità alle attività.\n\nLe informazioni raccolte non includono l'indirizzo IP o ogni altra informazione identificativa."
 }
