--- a/locales/pt.arb
+++ b/locales/pt.arb
@@ -1,57 +1,74 @@
 {
-  "@@locale": "pt",
-  "homeSelectFile": "Selecionar ficheiro",
-  "homeSelectApp": "Aplicação",
-  "homeSelectText": "Texto",
-  "homeSelectGallery": "Galeria",
-  "homeSelectTextTypeSomeText": "Escreva algum texto",
-  "homeHistory": "História",
-  "homeReceiver": "Receptor",
-  "homeUpdates": "Atualizações",
-  "homeUpdatesTheLatestVersionIsInstalled": "Já está instalada a versão mais recente",
-  "homeUpdatesCurrentVersion": "Versão atual",
-  "homeUpdatesLatestVersion": "Última versão",
-  "homeUpdatesChangelog": "Registo de alterações",
-  "selectAppSearch": "Pesquisar",
-  "selectAppHideSystem": "Ocultar aplicações de sistema",
-  "selectAppHideNonLaunch": "Ocultar aplicações não-iniciáveis",
-  "introGeneralDone": "FEITO",
-  "introGeneralNext": "SEGUINTE",
-  "generalClose": "Fechar",
-  "generalSend": "Enviar",
-  "generalOpenInGithub": "Abrir no GitHub",
-  "generalLoading": "A carregar",
-  "@_INTRO_PAGE": {},
-  "intro1ConnectTitle": "CONECTAR",
-  "intro1ConnectDescription": "Conecte os dispositivos à mesma rede Wi-Fi. Também pode usar um ponto de acesso (hotspot) móvel",
-  "intro2SendTitle": "ENVIAR",
-  "intro2SendDescription": "Pode partilhar imagens, vídeos, ficheiros e texto",
-  "intro3ReceiveTitle": "RECEBER",
-  "intro3ReceiveDescription": "Abra a hiperligação noutro dispositivo em qualquer navegador da Internet. Se tiver o Sharik instalado em ambos os dispositivos, também pode usar a função de receptor",
-  "intro4EverywhereTitle": "EM TODO O LADO",
-  "intro4EverywhereDescription": "O Sharik está disponível para todas as principais plataformas de telemóveis e computadores de mesa. Além disso é gratuito, não tem anúncios e o código-fonte está disponível na Internet.\nClique aqui para saber mais",
-  "@_ABOUT_PAGE": {},
-  "aboutInstalledVersion": "Versão instalada",
-  "aboutLatestVersion": "A última versão",
-  "aboutLatestVersionUnknown": "desconhecido",
-  "aboutCheckForUpdates": "Procurar atualizações",
-  "aboutUpdate": "Atualizar",
-  "aboutNoUpdates": "Sem atualizações",
-  "aboutOpenSourceLicenses": "Licenças de código aberto",
-  "aboutTrackingPolicy": "Política de rastreamento",
-  "aboutContributors": "Colaboradores",
-  "aboutSharikText": "O Sharik é completamente gratuito e com o código-fonte disponível no GitHub.\nTodos podem colaborar :>",
-  "aboutChangelog": "Registo de alterações",
-  "aboutLicenses": "Licenças",
-  "aboutPrivacyPolicy": "Política de privacidade",
-  "@_SHARING_PAGE": {},
-  "sharingReceiver": "Receptor",
-  "sharingNetworkInterfaces": "Interfaces de rede",
-  "sharingSelectNetworkInterface": "Selecione a interface de rede",
-  "sharingCopiedToClipboard": "Copiado para a área de transferência",
-  "sharingRecipientNeedsToBeConnected": "O receptor tem de estar conectado\nà mesma rede",
-  "sharingOpenInBrowser": "Agora abra esta hiperligação\nem qualquer navegador da Internet",
-  "sharingConnectToWiFiOrHotspot": "Conecte-se ao Wi-Fi ou configure um ponto de acesso (hotspot) móvel",
-  "fontAndika": "Andika",
-  "fontComfortaa": "Comfortaa"
+    "@@locale": "pt",
+    "homeSelectFile": "Selecionar ficheiro",
+    "homeSelectApp": "Aplicação",
+    "homeSelectText": "Texto",
+    "homeSelectGallery": "Galeria",
+    "homeSelectTextTypeSomeText": "Escreva algum texto",
+    "homeHistory": "História",
+    "homeReceiver": "Receptor",
+    "homeUpdates": "Atualizações",
+    "homeUpdatesTheLatestVersionIsInstalled": "Já está instalada a versão mais recente",
+    "homeUpdatesCurrentVersion": "Versão atual",
+    "homeUpdatesLatestVersion": "Última versão",
+    "homeUpdatesChangelog": "Registo de alterações",
+    "selectAppSearch": "Pesquisar",
+    "selectAppHideSystem": "Ocultar aplicações de sistema",
+    "selectAppHideNonLaunch": "Ocultar aplicações não-iniciáveis",
+    "introGeneralDone": "FEITO",
+    "introGeneralNext": "SEGUINTE",
+    "generalClose": "Fechar",
+    "generalSend": "Enviar",
+    "generalOpenInGithub": "Abrir no GitHub",
+    "generalLoading": "A carregar",
+    "@_INTRO_PAGE": {},
+    "intro1ConnectTitle": "CONECTAR",
+    "intro1ConnectDescription": "Conecte os dispositivos à mesma rede Wi-Fi. Também pode usar um ponto de acesso (hotspot) móvel",
+    "intro2SendTitle": "ENVIAR",
+    "intro2SendDescription": "Pode partilhar imagens, vídeos, ficheiros e texto",
+    "intro3ReceiveTitle": "RECEBER",
+    "intro3ReceiveDescription": "Abra a hiperligação noutro dispositivo em qualquer navegador da Internet. Se tiver o Sharik instalado em ambos os dispositivos, também pode usar a função de receptor",
+    "intro4EverywhereTitle": "EM TODO O LADO",
+    "intro4EverywhereDescription": "O Sharik está disponível para todas as principais plataformas de telemóveis e computadores de mesa. Além disso é gratuito, não tem anúncios e o código-fonte está disponível na Internet.\nClique aqui para saber mais",
+    "@_ABOUT_PAGE": {},
+    "aboutInstalledVersion": "Versão instalada",
+    "aboutLatestVersion": "A última versão",
+    "aboutLatestVersionUnknown": "desconhecido",
+    "aboutCheckForUpdates": "Procurar atualizações",
+    "aboutUpdate": "Atualizar",
+    "aboutNoUpdates": "Sem atualizações",
+    "aboutOpenSourceLicenses": "Licenças de código aberto",
+    "aboutTrackingPolicy": "Política de rastreamento",
+    "aboutContributors": "Colaboradores",
+    "aboutSharikText": "O Sharik é completamente gratuito e com o código-fonte disponível no GitHub.\nTodos podem colaborar :>",
+    "aboutChangelog": "Registo de alterações",
+    "aboutLicenses": "Licenças",
+    "aboutPrivacyPolicy": "Política de privacidade",
+    "@_SHARING_PAGE": {},
+    "sharingReceiver": "Receptor",
+    "sharingNetworkInterfaces": "Interfaces de rede",
+    "sharingSelectNetworkInterface": "Selecione a interface de rede",
+    "sharingCopiedToClipboard": "Copiado para a área de transferência",
+    "sharingRecipientNeedsToBeConnected": "O receptor tem de estar conectado\nà mesma rede",
+    "sharingOpenInBrowser": "Agora abra esta hiperligação\nem qualquer navegador da Internet",
+    "sharingConnectToWiFiOrHotspot": "Conecte-se ao Wi-Fi ou configure um ponto de acesso (hotspot) móvel",
+    "fontAndika": "Andika",
+    "fontComfortaa": "Comfortaa",
+    "homeSend": "Enviar",
+    "homeReceive": "Receive",
+    "homeFiles": "Files",
+    "shareDownloadAllButton": "Download all (Will skip folders, Requires JavaScript enabled)",
+    "settingsAppearance": "Appearance",
+    "settingsPrivacy": "Privacy",
+    "settingsTracking": "Tracking",
+    "settingsTrackingAllow": "Allow",
+    "settingsTrackingDisable": "Disable",
+    "settingsTheme": "Theme",
+    "settingsThemeSystem": "System",
+    "settingsThemeLight": "Light",
+    "settingsThemeDark": "Dark",
+    "settingsDisableScreenTransitions": "Disable screen transitions",
+    "settingsDisableBlur": "Disable blur",
+    "settingsDisableTracking": "Disable tracking",
+    "settingsTrackingDescription": "Sharik incorporates privacy-respecting tracking to learn more about the audience of the app. We are using the analytics data to plan new features, and prioritize tasks.\n\nThe collected information does not include IP address or any other identifying information."
 }
