--- a/locales/zh_hans.arb
+++ b/locales/zh_hans.arb
@@ -1,57 +1,74 @@
 {
-  "@@locale": "zh",
-  "homeSelectFile": "选择文件",
-  "homeSelectApp": "App",
-  "homeSelectText": "文本",
-  "homeSelectGallery": "相册",
-  "homeSelectTextTypeSomeText": "输入一些文本",
-  "homeHistory": "历史记录",
-  "homeReceiver": "接收器",
-  "homeUpdates": "更新",
-  "homeUpdatesTheLatestVersionIsInstalled": "已安装最新版本",
-  "homeUpdatesCurrentVersion": "当前版本",
-  "homeUpdatesLatestVersion": "最新版本",
-  "homeUpdatesChangelog": "更新日志​​​​​",
-  "selectAppSearch": "搜索",
-  "selectAppHideSystem": "隐藏系统应用",
-  "selectAppHideNonLaunch": "隐藏没有桌面图标的应用",
-  "introGeneralDone": "完成",
-  "introGeneralNext": "下一步",
-  "generalClose": "关闭",
-  "generalSend": "发送",
-  "generalOpenInGithub": "在 GitHub 上打开",
-  "generalLoading": "加载中",
-  "@_INTRO_PAGE": {},
-  "intro1ConnectTitle": "连接",
-  "intro1ConnectDescription": "将设备连接到相同的Wi-Fi网络。您也可以使用移动热点",
-  "intro2SendTitle": "发送",
-  "intro2SendDescription": "您可以分享图片、视频、文件和文本",
-  "intro3ReceiveTitle": "接收",
-  "intro3ReceiveDescription": "请在其他设备的浏览器上打开链接。若您在两台设备上都安装了 Sharik，您也可以使用接收功能。",
-  "intro4EverywhereTitle": "EVERYWERE",
-  "intro4EverywhereDescription": "Sharik 可用于所有主流手机及桌面平台。另外，这是一款免费、开源、无广告的应用。\n点此了解详情",
-  "@_ABOUT_PAGE": {},
-  "aboutInstalledVersion": "已安装版本",
-  "aboutLatestVersion": "最新版本",
-  "aboutLatestVersionUnknown": "未知",
-  "aboutCheckForUpdates": "检查更新",
-  "aboutUpdate": "更新",
-  "aboutNoUpdates": "暂无更新",
-  "aboutOpenSourceLicenses": "开源许可",
-  "aboutTrackingPolicy": "跟踪政策",
-  "aboutContributors": "贡献者",
-  "aboutSharikText": "Sharik 完全免费，其代码托管在 GitHub 上。\n欢迎各位参与贡献 :>",
-  "aboutChangelog": "更新日志​​​​​",
-  "aboutLicenses": "Licenses",
-  "aboutPrivacyPolicy": "隐私政策",
-  "@_SHARING_PAGE": {},
-  "sharingReceiver": "接收器",
-  "sharingNetworkInterfaces": "网络",
-  "sharingSelectNetworkInterface": "请选择网络",
-  "sharingCopiedToClipboard": "已复制到剪切板",
-  "sharingRecipientNeedsToBeConnected": "接收者需要连接\n到相同的网络下",
-  "sharingOpenInBrowser": "请在任意浏览器中打开此链接",
-  "sharingConnectToWiFiOrHotspot": "连接到 Wi-Fi 或创建移动热点",
-  "fontAndika": "ZCOOL XiaoWei",
-  "fontComfortaa": "ZCOOL QingKe HuangYou"
+    "@@locale": "zh",
+    "homeSelectFile": "选择文件",
+    "homeSelectApp": "App",
+    "homeSelectText": "文本",
+    "homeSelectGallery": "相册",
+    "homeSelectTextTypeSomeText": "输入一些文本",
+    "homeHistory": "历史记录",
+    "homeReceiver": "接收器",
+    "homeUpdates": "更新",
+    "homeUpdatesTheLatestVersionIsInstalled": "已安装最新版本",
+    "homeUpdatesCurrentVersion": "当前版本",
+    "homeUpdatesLatestVersion": "最新版本",
+    "homeUpdatesChangelog": "更新日志​​​​​",
+    "selectAppSearch": "搜索",
+    "selectAppHideSystem": "隐藏系统应用",
+    "selectAppHideNonLaunch": "隐藏没有桌面图标的应用",
+    "introGeneralDone": "完成",
+    "introGeneralNext": "下一步",
+    "generalClose": "关闭",
+    "generalSend": "发送",
+    "generalOpenInGithub": "在 GitHub 上打开",
+    "generalLoading": "加载中",
+    "@_INTRO_PAGE": {},
+    "intro1ConnectTitle": "连接",
+    "intro1ConnectDescription": "将设备连接到相同的Wi-Fi网络。您也可以使用移动热点",
+    "intro2SendTitle": "发送",
+    "intro2SendDescription": "您可以分享图片、视频、文件和文本",
+    "intro3ReceiveTitle": "接收",
+    "intro3ReceiveDescription": "请在其他设备的浏览器上打开链接。若您在两台设备上都安装了 Sharik，您也可以使用接收功能。",
+    "intro4EverywhereTitle": "EVERYWERE",
+    "intro4EverywhereDescription": "Sharik 可用于所有主流手机及桌面平台。另外，这是一款开源、自由、无广告的应用。\n点此了解详情",
+    "@_ABOUT_PAGE": {},
+    "aboutInstalledVersion": "已安装版本",
+    "aboutLatestVersion": "最新版本",
+    "aboutLatestVersionUnknown": "未知",
+    "aboutCheckForUpdates": "检查更新",
+    "aboutUpdate": "更新",
+    "aboutNoUpdates": "暂无更新",
+    "aboutOpenSourceLicenses": "开源许可",
+    "aboutTrackingPolicy": "跟踪政策",
+    "aboutContributors": "贡献者",
+    "aboutSharikText": "Sharik 是一个自由软件，其代码托管在 GitHub 上。\n欢迎各位参与贡献 :>",
+    "aboutChangelog": "更新日志​​​​​",
+    "aboutLicenses": "Licenses",
+    "aboutPrivacyPolicy": "隐私政策",
+    "@_SHARING_PAGE": {},
+    "sharingReceiver": "接收器",
+    "sharingNetworkInterfaces": "网络",
+    "sharingSelectNetworkInterface": "请选择网络",
+    "sharingCopiedToClipboard": "已复制到剪切板",
+    "sharingRecipientNeedsToBeConnected": "接收者需要连接\n到相同的网络下",
+    "sharingOpenInBrowser": "请在任意浏览器中打开此链接",
+    "sharingConnectToWiFiOrHotspot": "连接到 Wi-Fi 或创建移动热点",
+    "fontAndika": "ZCOOL XiaoWei",
+    "fontComfortaa": "ZCOOL QingKe HuangYou",
+    "homeSend": "发送",
+    "homeReceive": "接收",
+    "homeFiles": "文件",
+    "shareDownloadAllButton": "下载全部 (跳过文件夹，需要启用 JavaScript)",
+    "settingsAppearance": "外观",
+    "settingsPrivacy": "隐私",
+    "settingsTracking": "跟踪",
+    "settingsTrackingAllow": "允许",
+    "settingsTrackingDisable": "停用",
+    "settingsTheme": "主题",
+    "settingsThemeSystem": "系統",
+    "settingsThemeLight": "浅色模式",
+    "settingsThemeDark": "深色模式",
+    "settingsDisableScreenTransitions": "禁用屏幕过渡动画",
+    "settingsDisableBlur": "禁用模糊功能",
+    "settingsDisableTracking": "禁用跟踪",
+    "settingsTrackingDescription": "Sharik 纳入了尊重隐私的跟踪，以更多地了解该应用的用户。 我们正在使用分析数据来规划新的功能和确定任务的优先次序。\n\n收集到的信息不包括IP地址或任何其他身份识别信息。"
 }
