--- a/locales/ar.arb
+++ b/locales/ar.arb
@@ -1,57 +1,74 @@
 {
-  "@@locale": "ar",
-  "homeSelectFile": "اختر ملف",
-  "homeSelectApp": "تطبيق",
-  "homeSelectText": "نص",
-  "homeSelectGallery": "الاستديو",
-  "homeSelectTextTypeSomeText": "اكتب بعض النص",
-  "homeHistory": "السجل",
-  "homeReceiver": "المستلم",
-  "homeUpdates": "التحديثات",
-  "homeUpdatesTheLatestVersionIsInstalled": "تم تثبيت أحدث إصدار من هذا التطبيق مسبقا",
-  "homeUpdatesCurrentVersion": "الإصدار الحالي",
-  "homeUpdatesLatestVersion": "أحدث إصدار",
-  "homeUpdatesChangelog": "سجل التغييرات",
-  "selectAppSearch": "ابحث",
-  "selectAppHideSystem": "إخفاء تطبيقات النظام",
-  "selectAppHideNonLaunch": "إخفاء التطبيقات غير القابلة للفتح",
-  "introGeneralDone": "تم",
-  "introGeneralNext": "التالي",
-  "generalClose": "إغلاق",
-  "generalSend": "إرسال",
-  "generalOpenInGithub": "افتح على GitHub",
-  "generalLoading": "جاري التحميل",
-  "@_INTRO_PAGE": {},
-  "intro1ConnectTitle": "اتصل",
-  "intro1ConnectDescription": "قم بتوصيل الأجهزة بنفس شبكة الواي فاي. يمكنك أيضًا استخدام نقطة اتصال الجوال",
-  "intro2SendTitle": "ارسل",
-  "intro2SendDescription": "يمكنك مشاركة الصور ومقاطع الفيديو والملفات والنصوص",
-  "intro3ReceiveTitle": "إستلم",
-  "intro3ReceiveDescription": "افتح الرابط على جهاز آخر في أي متصفح ويب. إذا كان لديك برنامج شارك على كلا الجهازين، يمكنك أيضًا استخدام وظيفة الاستلام",
-  "intro4EverywhereTitle": "كل مكان",
-  "intro4EverywhereDescription": "شارك متاح لجميع المنصات الرئيسية المتنقلة والمكتبية. ايضا، انها مجانية، ليس فيها إعلانات، وتعليماتها تنشر على الانترنت.\nانقر هنا لمعرفة المزيد",
-  "@_ABOUT_PAGE": {},
-  "aboutInstalledVersion": "الإصدار المثبت",
-  "aboutLatestVersion": "أحدث إصدار",
-  "aboutLatestVersionUnknown": "غير معروف",
-  "aboutCheckForUpdates": "التحقق من وجود تحديثات",
-  "aboutUpdate": "تحديث",
-  "aboutNoUpdates": "لا يوجد تحديثات",
-  "aboutOpenSourceLicenses": "تراخيص المصدر المفتوح",
-  "aboutTrackingPolicy": "سياسة التتبع",
-  "aboutContributors": "المساهمون",
-  "aboutSharikText": "شارك مجاني تماما مع تعليماته البرمجية المنشورة على GitHub.\nالجميع مرحب بهم للمساهمة :>",
-  "aboutChangelog": "سجل التغييرات",
-  "aboutLicenses": "التراخيص",
-  "aboutPrivacyPolicy": "سياسة الخصوصية",
-  "@_SHARING_PAGE": {},
-  "sharingReceiver": "المستلم",
-  "sharingNetworkInterfaces": "واجهة شبكة الاتصال",
-  "sharingSelectNetworkInterface": "اختر واجهة شبكة",
-  "sharingCopiedToClipboard": "تم النسخ",
-  "sharingRecipientNeedsToBeConnected": "يجب أن يكون المستلم متصلاً\nبنفس الشبكة",
-  "sharingOpenInBrowser": "الآن افتح هذا الرابط\nفي أي متصفح",
-  "sharingConnectToWiFiOrHotspot": "الاتصال بشبكة الواي فاي أو إعداد نقطة نقطة اتصال الجوال",
-  "fontAndika": "Tajawal",
-  "fontComfortaa": "Almarai"
+    "@@locale": "ar",
+    "homeSelectFile": "اختر ملف",
+    "homeSelectApp": "تطبيق",
+    "homeSelectText": "نص",
+    "homeSelectGallery": "معرض الصور",
+    "homeSelectTextTypeSomeText": "اكتب بعض النص",
+    "homeHistory": "السجل",
+    "homeReceiver": "المستلم",
+    "homeUpdates": "التحديثات",
+    "homeUpdatesTheLatestVersionIsInstalled": "تم تثبيت أحدث إصدار من هذا التطبيق مسبقا",
+    "homeUpdatesCurrentVersion": "الإصدار الحالي",
+    "homeUpdatesLatestVersion": "أحدث إصدار",
+    "homeUpdatesChangelog": "سجل التغييرات",
+    "selectAppSearch": "ابحث",
+    "selectAppHideSystem": "إخفاء تطبيقات النظام",
+    "selectAppHideNonLaunch": "إخفاء التطبيقات غير القابلة للفتح",
+    "introGeneralDone": "تم",
+    "introGeneralNext": "التالي",
+    "generalClose": "إغلاق",
+    "generalSend": "إرسال",
+    "generalOpenInGithub": "افتح على GitHub",
+    "generalLoading": "جاري التحميل",
+    "@_INTRO_PAGE": {},
+    "intro1ConnectTitle": "اتصل",
+    "intro1ConnectDescription": "قم بتوصيل الأجهزة على شبكة الواي فاي. يمكنك أيضًا استخدام نقطة اتصال الهاتف المتنقلة",
+    "intro2SendTitle": "إرسال",
+    "intro2SendDescription": "يمكنك مشاركة الصور ومقاطع الفيديو والملفات والنصوص",
+    "intro3ReceiveTitle": "إستلم",
+    "intro3ReceiveDescription": "افتح الرابط على جهاز آخر في أي متصفح ويب. إذا كان لديك برنامج شارك على كلا الجهازين، يمكنك أيضًا استخدام وظيفة الاستلام",
+    "intro4EverywhereTitle": "كل مكان",
+    "intro4EverywhereDescription": "شارك متاح لجميع المنصات الرئيسية المتنقلة والمكتبية. ايضا، انه مجاني، ليس فيه إعلانات، والكود المصدري منتنشر على الانترنت.\nانقر هنا لمعرفة المزيد",
+    "@_ABOUT_PAGE": {},
+    "aboutInstalledVersion": "الإصدار المثبت",
+    "aboutLatestVersion": "أحدث إصدار",
+    "aboutLatestVersionUnknown": "غير معروف",
+    "aboutCheckForUpdates": "التحقق من وجود تحديثات",
+    "aboutUpdate": "تحديث",
+    "aboutNoUpdates": "لا يوجد تحديثات",
+    "aboutOpenSourceLicenses": "تراخيص المصدر المفتوح",
+    "aboutTrackingPolicy": "سياسة التتبع",
+    "aboutContributors": "المساهمون",
+    "aboutSharikText": "شارك مجاني تماما مع تعليماته البرمجية المنشورة على GitHub.\nالجميع مرحب بهم للمساهمة :>",
+    "aboutChangelog": "سجل التغييرات",
+    "aboutLicenses": "التراخيص",
+    "aboutPrivacyPolicy": "سياسة الخصوصية",
+    "@_SHARING_PAGE": {},
+    "sharingReceiver": "المستلم",
+    "sharingNetworkInterfaces": "واجهة شبكة الاتصال",
+    "sharingSelectNetworkInterface": "اختر واجهة شبكة",
+    "sharingCopiedToClipboard": "تم النسخ",
+    "sharingRecipientNeedsToBeConnected": "يجب أن يكون المستلم متصلاً\nبنفس الشبكة",
+    "sharingOpenInBrowser": "الآن افتح هذا الرابط\nفي أي متصفح",
+    "sharingConnectToWiFiOrHotspot": "الاتصال بشبكة الواي فاي أو إعداد نقطة اتصال الهاتف المحمولة",
+    "fontAndika": "Andika",
+    "fontComfortaa": "Comfortaa",
+    "homeSend": "إرسال",
+    "homeReceive": "استلام",
+    "homeFiles": "الملفات",
+    "shareDownloadAllButton": "تحميل الكل (سيتم تخطي المجلدات، يتطلب تمكين جافا سكريبت)",
+    "settingsAppearance": "المظهر",
+    "settingsPrivacy": "الخصوصية",
+    "settingsTracking": "التتبع",
+    "settingsTrackingAllow": "السماح",
+    "settingsTrackingDisable": "تعطيل",
+    "settingsTheme": "الثيم",
+    "settingsThemeSystem": "النظام",
+    "settingsThemeLight": "فاتح",
+    "settingsThemeDark": "داكن",
+    "settingsDisableScreenTransitions": "تعطيل تأثيرات الشاشة",
+    "settingsDisableBlur": "تعطيل الضبابية",
+    "settingsDisableTracking": "تعطيل التتبع",
+    "settingsTrackingDescription": "شاريك يحتوي على تتبع يحترم الخصوصية لمعرفة المزيد عن مستخدمين التطبيق. نحن نستخدم بيانات التحليلات لتخطيط الميزات الجديدة وتحديد أولويات المهام.\n\nالمعلومات التي يتم جمعها لا تشمل عنوان IP أو أي معلومات أخرى تعريفية."
 }
