--- a/locales/sk.arb
+++ b/locales/sk.arb
@@ -1,57 +1,74 @@
 {
-  "@@locale": "sk",
-  "homeSelectFile": "Vybrať súbor",
-  "homeSelectApp": "Aplikácia",
-  "homeSelectText": "Text",
-  "homeSelectGallery": "Galéria",
-  "homeSelectTextTypeSomeText": "Sem napíšte text",
-  "homeHistory": "História",
-  "homeReceiver": "Prijímateľ",
-  "homeUpdates": "Aktualizácie",
-  "homeUpdatesTheLatestVersionIsInstalled": "Najnovšia verzia je už nainštalovaná",
-  "homeUpdatesCurrentVersion": "Sučasná verzia",
-  "homeUpdatesLatestVersion": "Najnovšia verzia",
-  "homeUpdatesChangelog": "Zoznam zmien",
-  "selectAppSearch": "Hľadať",
-  "selectAppHideSystem": "Skryť systémové aplikácie",
-  "selectAppHideNonLaunch": "Skryť nespustiteľné aplikácie",
-  "introGeneralDone": "HOTOVO",
-  "introGeneralNext": "ĎALEJ",
-  "generalClose": "Zavrieť",
-  "generalSend": "Odoslať",
-  "generalOpenInGithub": "Zobraziť na GitHub",
-  "generalLoading": "Načítavanie",
-  "@_INTRO_PAGE": {},
-  "intro1ConnectTitle": "PRIPOJIŤ",
-  "intro1ConnectDescription": "Pripojte zariadenia do rovnaje Wi-Fi siete. Môžete tiež použiť mobilný prístupový bod",
-  "intro2SendTitle": "ODOSLAŤ",
-  "intro2SendDescription": "Môžete zdieľať obrázky, videá, súbory a text",
-  "intro3ReceiveTitle": "PRIJAŤ",
-  "intro3ReceiveDescription": "Otvorte odkaz na inom zariadení v ľubovoľnom webovom prehliadači. Ak je Sharik na oboch zariadeniach, môžete použiť funkciu prijímania",
-  "intro4EverywhereTitle": "KDEKOĽVEK",
-  "intro4EverywhereDescription": "Sharik je dostupný pre všetky veľké mobilné a stolové platformy. Tiež je zdarma, bez reklám a má otvorený zdrojový kód. Pre viac informácií kliknite sem",
-  "@_ABOUT_PAGE": {},
-  "aboutInstalledVersion": "Nainštalovaná verzia",
-  "aboutLatestVersion": "Najnovšia verzia",
-  "aboutLatestVersionUnknown": "neznámy",
-  "aboutCheckForUpdates": "Skontrolovať aktualizácie",
-  "aboutUpdate": "Aktualizovať",
-  "aboutNoUpdates": "Žiadne aktualizácie",
-  "aboutOpenSourceLicenses": "Open source licencia",
-  "aboutTrackingPolicy": "Podmienky sledovania",
-  "aboutContributors": "Prispievatelia",
-  "aboutSharikText": "Sharik je zdarma s otvoreným zdrojovým kódom na GitHube. Ktokoľvek môže prispieť :>",
-  "aboutChangelog": "Zoznam zmien",
-  "aboutLicenses": "Licencie",
-  "aboutPrivacyPolicy": "Zásady ochrany osobných údajov",
-  "@_SHARING_PAGE": {},
-  "sharingReceiver": "Prijímateľ",
-  "sharingNetworkInterfaces": "Sieťové zariadenia",
-  "sharingSelectNetworkInterface": "Vyberte sieťové zariadenie",
-  "sharingCopiedToClipboard": "Skopírované do schránky",
-  "sharingRecipientNeedsToBeConnected": "Prijímateľ musí byť pripojený do rovnakej siete",
-  "sharingOpenInBrowser": "Teraz otvorte tento odkaz v ľubovoľnom webovom prehliadači",
-  "sharingConnectToWiFiOrHotspot": "Pripojte sa k Wi-Fi sieti alebo vytvorte mobilný prístupový bod",
-  "fontAndika": "Andika",
-  "fontComfortaa": "Comfortaa"
+    "@@locale": "sk",
+    "homeSelectFile": "Vybrať súbor",
+    "homeSelectApp": "Aplikácia",
+    "homeSelectText": "Text",
+    "homeSelectGallery": "Galéria",
+    "homeSelectTextTypeSomeText": "Sem napíšte text",
+    "homeHistory": "História",
+    "homeReceiver": "Prijímateľ",
+    "homeUpdates": "Aktualizácie",
+    "homeUpdatesTheLatestVersionIsInstalled": "Najnovšia verzia je už nainštalovaná",
+    "homeUpdatesCurrentVersion": "Súčasná verzia",
+    "homeUpdatesLatestVersion": "Najnovšia verzia",
+    "homeUpdatesChangelog": "Zoznam zmien",
+    "selectAppSearch": "Hľadať",
+    "selectAppHideSystem": "Skryť systémové aplikácie",
+    "selectAppHideNonLaunch": "Skryť nespustiteľné aplikácie",
+    "introGeneralDone": "HOTOVO",
+    "introGeneralNext": "ĎALEJ",
+    "generalClose": "Zavrieť",
+    "generalSend": "Odoslať",
+    "generalOpenInGithub": "Otvoriť na GitHube",
+    "generalLoading": "Načítavanie",
+    "@_INTRO_PAGE": {},
+    "intro1ConnectTitle": "PRIPOJIŤ",
+    "intro1ConnectDescription": "Pripojte zariadenia do rovnakej Wi-Fi siete. Môžete tiež použiť mobilný prístupový bod",
+    "intro2SendTitle": "ODOSLAŤ",
+    "intro2SendDescription": "Môžete zdieľať obrázky, videá, súbory a text",
+    "intro3ReceiveTitle": "PRIJAŤ",
+    "intro3ReceiveDescription": "Otvorte odkaz na inom zariadení v ľubovoľnom webovom prehliadači. Ak je Sharik na oboch zariadeniach, môžete tiež použiť funkciu prijímania",
+    "intro4EverywhereTitle": "KDEKOĽVEK",
+    "intro4EverywhereDescription": "Sharik je dostupný pre všetky bežné mobilné a počítačové platformy. Tiež je zdarma, bez reklám a má otvorený zdrojový kód zverejnený na internete. \nPre viac informácií kliknite sem",
+    "@_ABOUT_PAGE": {},
+    "aboutInstalledVersion": "Nainštalovaná verzia",
+    "aboutLatestVersion": "Najnovšia verzia",
+    "aboutLatestVersionUnknown": "neznáme",
+    "aboutCheckForUpdates": "Skontrolovať aktualizácie",
+    "aboutUpdate": "Aktualizovať",
+    "aboutNoUpdates": "Žiadne aktualizácie",
+    "aboutOpenSourceLicenses": "Licencie otvoreného zdrojového kódu",
+    "aboutTrackingPolicy": "Podmienky sledovania",
+    "aboutContributors": "Prispievatelia",
+    "aboutSharikText": "Sharik je zdarma s otvoreným zdrojovým kódom na GitHube. Ktokoľvek môže prispieť :>",
+    "aboutChangelog": "Zoznam zmien",
+    "aboutLicenses": "Licencie",
+    "aboutPrivacyPolicy": "Zásady ochrany osobných údajov",
+    "@_SHARING_PAGE": {},
+    "sharingReceiver": "Prijímateľ",
+    "sharingNetworkInterfaces": "Sieťové rozhrania",
+    "sharingSelectNetworkInterface": "Vyberte sieťové rozhranie",
+    "sharingCopiedToClipboard": "Skopírované do schránky",
+    "sharingRecipientNeedsToBeConnected": "Prijímateľ musí byť pripojený do rovnakej siete",
+    "sharingOpenInBrowser": "Teraz otvorte tento odkaz v ľubovoľnom webovom prehliadači",
+    "sharingConnectToWiFiOrHotspot": "Pripojte sa k Wi-Fi sieti alebo vytvorte mobilný prístupový bod",
+    "fontAndika": "Andika",
+    "fontComfortaa": "Comfortaa",
+    "homeSend": "Odoslať",
+    "homeReceive": "Prijať",
+    "homeFiles": "Súbory",
+    "shareDownloadAllButton": "Stiahnuť všetko (preskočí priečinky, vyžaduje zapnutý JavaScript)",
+    "settingsAppearance": "Appearance",
+    "settingsPrivacy": "Privacy",
+    "settingsTracking": "Tracking",
+    "settingsTrackingAllow": "Allow",
+    "settingsTrackingDisable": "Disable",
+    "settingsTheme": "Theme",
+    "settingsThemeSystem": "System",
+    "settingsThemeLight": "Light",
+    "settingsThemeDark": "Dark",
+    "settingsDisableScreenTransitions": "Disable screen transitions",
+    "settingsDisableBlur": "Disable blur",
+    "settingsDisableTracking": "Disable tracking",
+    "settingsTrackingDescription": "Sharik incorporates privacy-respecting tracking to learn more about the audience of the app. We are using the analytics data to plan new features, and prioritize tasks.\n\nThe collected information does not include IP address or any other identifying information."
 }
