--- a/locales/tr.arb
+++ b/locales/tr.arb
@@ -1,57 +1,74 @@
 {
-  "@@locale": "tr",
-  "homeSelectFile": "Dosya seç",
-  "homeSelectApp": "Uygulama",
-  "homeSelectText": "Metin",
-  "homeSelectGallery": "Galeri",
-  "homeSelectTextTypeSomeText": "Bir metin girin",
-  "homeHistory": "Geçmiş",
-  "homeReceiver": "Alıcı",
-  "homeUpdates": "Güncellemeler",
-  "homeUpdatesTheLatestVersionIsInstalled": "Son sürüm zaten yüklü",
-  "homeUpdatesCurrentVersion": "Mevcut sürüm",
-  "homeUpdatesLatestVersion": "Son sürüm",
-  "homeUpdatesChangelog": "Sürüm notları",
-  "selectAppSearch": "Ara",
-  "selectAppHideSystem": "Sistem uygulamalarını gizle",
-  "selectAppHideNonLaunch": "Başlatılamayan uygulamaları gizle",
-  "introGeneralDone": "BİTTİ",
-  "introGeneralNext": "SONRAKİ",
-  "generalClose": "Kapat",
-  "generalSend": "Gönder",
-  "generalOpenInGithub": "GitHub'da Aç",
-  "generalLoading": "Yükleniyor",
-  "@_INTRO_PAGE": {},
-  "intro1ConnectTitle": "BAĞLAN",
-  "intro1ConnectDescription": "Aygıtları aynı Wi-Fi ağa bağlayınız. Mobil Kablosuz Erişim Noktası da kullanabilirsiniz",
-  "intro2SendTitle": "GÖNDER",
-  "intro2SendDescription": "Resimler, videolar, dosyalar ve metin paylaşabilirsiniz",
-  "intro3ReceiveTitle": "AL",
-  "intro3ReceiveDescription": "Bağlantıyı bir başka aygıtta, herhangi bir tarayıcıda açın. Eğer her iki aygıtta da Sharik varsa, alım işlevini de kullanabilirsiniz",
-  "intro4EverywhereTitle": "HER YERDE",
-  "intro4EverywhereDescription": "Sharik bütün başlıca mobil ve masaüstü platformlarında mevcut. Üstelik ücretsiz, reklam içermiyor ve kodunu çevrim içi yayınlanıyor.\nDaha fazlasını öğrenmek için tıklayın",
-  "@_ABOUT_PAGE": {},
-  "aboutInstalledVersion": "Yüklü sürüm",
-  "aboutLatestVersion": "Son sürüm",
-  "aboutLatestVersionUnknown": "bilinmiyor",
-  "aboutCheckForUpdates": "Güncellemeleri denetle",
-  "aboutUpdate": "Güncelle",
-  "aboutNoUpdates": "Güncelleme yok",
-  "aboutOpenSourceLicenses": "Açık kaynak lisansları",
-  "aboutTrackingPolicy": "İzleme politikası",
-  "aboutContributors": "Katkıda bulunanlar",
-  "aboutSharikText": "Sharik tamamen özgür ve tüm kodu GitHub'da yayınlanıyor.\nDileyen herkes katkıda bulunabilir :>",
-  "aboutChangelog": "Sürüm notları",
-  "aboutLicenses": "Lisanslar",
-  "aboutPrivacyPolicy": "Gizlilik politikası",
-  "@_SHARING_PAGE": {},
-  "sharingReceiver": "Alıcı",
-  "sharingNetworkInterfaces": "Ağ arabirimleri",
-  "sharingSelectNetworkInterface": "Ağ arabimi seçin",
-  "sharingCopiedToClipboard": "Panoya Kopyalandı",
-  "sharingRecipientNeedsToBeConnected": "Alıcının aynı ağa bağlı olması gerekiyor",
-  "sharingOpenInBrowser": "Şimdi bu bağlantıyı herhangi\nbir tarayıcıda açın",
-  "sharingConnectToWiFiOrHotspot": "Wi-Fi'ye bağlanın veya bir Mobil Kablosuz Erişim noktası kurun",
-  "fontAndika": "Andika",
-  "fontComfortaa": "Comfortaa"
+    "@@locale": "tr",
+    "homeSelectFile": "Dosya seç",
+    "homeSelectApp": "Uygulama",
+    "homeSelectText": "Metin",
+    "homeSelectGallery": "Galeri",
+    "homeSelectTextTypeSomeText": "Bir metin girin",
+    "homeHistory": "Geçmiş",
+    "homeReceiver": "Alıcı",
+    "homeUpdates": "Güncellemeler",
+    "homeUpdatesTheLatestVersionIsInstalled": "Son sürüm zaten yüklü",
+    "homeUpdatesCurrentVersion": "Mevcut sürüm",
+    "homeUpdatesLatestVersion": "Son sürüm",
+    "homeUpdatesChangelog": "Sürüm notları",
+    "selectAppSearch": "Ara",
+    "selectAppHideSystem": "Sistem uygulamalarını gizle",
+    "selectAppHideNonLaunch": "Başlatılamayan uygulamaları gizle",
+    "introGeneralDone": "BİTTİ",
+    "introGeneralNext": "SONRAKİ",
+    "generalClose": "Kapat",
+    "generalSend": "Gönder",
+    "generalOpenInGithub": "GitHub'da Aç",
+    "generalLoading": "Yükleniyor",
+    "@_INTRO_PAGE": {},
+    "intro1ConnectTitle": "BAĞLAN",
+    "intro1ConnectDescription": "Aygıtları aynı Wi-Fi ağa bağlayınız. Mobil Kablosuz Erişim Noktası da kullanabilirsiniz",
+    "intro2SendTitle": "GÖNDER",
+    "intro2SendDescription": "Resimler, videolar, dosyalar ve metin paylaşabilirsiniz",
+    "intro3ReceiveTitle": "AL",
+    "intro3ReceiveDescription": "Bağlantıyı bir başka aygıtta, herhangi bir tarayıcıda açın. Eğer her iki aygıtta da Sharik varsa, alım işlevini de kullanabilirsiniz",
+    "intro4EverywhereTitle": "HER YERDE",
+    "intro4EverywhereDescription": "Sharik bütün başlıca mobil ve masaüstü platformlarında mevcut. Üstelik ücretsiz, reklam içermiyor ve kodunu çevrim içi yayınlanıyor.\nDaha fazlasını öğrenmek için tıklayın",
+    "@_ABOUT_PAGE": {},
+    "aboutInstalledVersion": "Yüklü sürüm",
+    "aboutLatestVersion": "Son sürüm",
+    "aboutLatestVersionUnknown": "bilinmiyor",
+    "aboutCheckForUpdates": "Güncellemeleri denetle",
+    "aboutUpdate": "Güncelle",
+    "aboutNoUpdates": "Güncelleme yok",
+    "aboutOpenSourceLicenses": "Açık kaynak lisansları",
+    "aboutTrackingPolicy": "İzleme politikası",
+    "aboutContributors": "Katkıda bulunanlar",
+    "aboutSharikText": "Sharik tamamen özgür ve tüm kodu GitHub'da yayınlanıyor.\nDileyen herkes katkıda bulunabilir :>",
+    "aboutChangelog": "Sürüm notları",
+    "aboutLicenses": "Lisanslar",
+    "aboutPrivacyPolicy": "Gizlilik politikası",
+    "@_SHARING_PAGE": {},
+    "sharingReceiver": "Alıcı",
+    "sharingNetworkInterfaces": "Ağ arabirimleri",
+    "sharingSelectNetworkInterface": "Ağ arabimi seçin",
+    "sharingCopiedToClipboard": "Panoya Kopyalandı",
+    "sharingRecipientNeedsToBeConnected": "Alıcının aynı ağa bağlı olması gerekiyor",
+    "sharingOpenInBrowser": "Şimdi bu bağlantıyı herhangi\nbir tarayıcıda açın",
+    "sharingConnectToWiFiOrHotspot": "Wi-Fi'ye bağlanın veya bir Mobil Kablosuz Erişim noktası kurun",
+    "fontAndika": "Andika",
+    "fontComfortaa": "Comfortaa",
+    "homeSend": "Gönder",
+    "homeReceive": "Al",
+    "homeFiles": "Dosyalar",
+    "shareDownloadAllButton": "Hepsini indir (Dizinleri atlar, JavaScript'in etkin olması gerekli)",
+    "settingsAppearance": "Görünüm",
+    "settingsPrivacy": "Gizlilik",
+    "settingsTracking": "İzleme",
+    "settingsTrackingAllow": "İzin ver",
+    "settingsTrackingDisable": "Devre Dışı Bırak",
+    "settingsTheme": "Tema",
+    "settingsThemeSystem": "Sistem",
+    "settingsThemeLight": "Aydınlık",
+    "settingsThemeDark": "Karanlık",
+    "settingsDisableScreenTransitions": "Ekran geçişlerini devre dışı bırak",
+    "settingsDisableBlur": "Bulanıklığı devre dışı bırak",
+    "settingsDisableTracking": "İzlemeyi devre dışı bırak",
+    "settingsTrackingDescription": "Sharik, uygulamanın hedef kitlesi hakkında daha fazla bilgi toplamak için gizliliğe saygı duyan bir izlemeyi içeriyor. Analitik verilerini yeni özellikleri planlamak ve görevlerin önceliğini belirlemek için kullanıyoruz.\n\nToplanan bilgi, IP adresi veya herhangi bir tanımlayıcı bilgi içermez."
 }
